# agentic-planning-eval

./: .env.example  .gitignore  .gitlab-ci.yml  DEMO.ipynb  README.md  TODO.md  aggregate_results.py  aggregated_results.csv  generate_prompts.py  kick_green.py  llm_test.py  main.py  mlflow.db  pyproject.toml  requirements.txt  run_local_assessment.py  show_optimal_costs.py  test-llm-calls.py  test_model_up.py  tests.ipynb
agents/: critic_orchestrator.py  plan_and_solve_orchestrator.py  react_orchestrator.py  react_orchestrator_sequential.py  react_test.py  verify_crash.py
examples/_original_domains_20251228_183832/logistics/: prompts.json
examples/balancer/: domain.pddl  prompts.json
examples/balancer/problems_pddl/: problem1.pddl  problem10.pddl  problem2.pddl  problem3.pddl  problem4.pddl  problem5.pddl  problem6.pddl  problem7.pddl  problem8.pddl  (+1 more)
examples/blocks/: description.md  domain.pddl  object_rename_map.json  problem.pddl  prompt.md  prompts.json  sample_prompt.md
examples/enterprise/: prompts.json
examples/gripper/: object_rename_map.json  prompts.json
examples/hospital/: domain.pddl  prompts.json
examples/ipc/: domain.pddl
examples/logistics/: object_rename_map.json  prompts.json
examples/manufacturing/: domain.pddl  prompts.json
examples/rover/: prompt.md
examples/rush/: domain.pddl  problem.pddl  prompt.md
examples/rush_hour/: sample_prompt.md
experiments/: example_config.yaml  mlflow_utils.py  models.py  run_grid.py  run_prompting_grid_parallel.py
green_agent/: __init__.py  a2a_server.py  cli.py  config.py  metrics.py  pddl_actions.py  plan_parser.py  runner.py  tools_backend.py  val_wrapper.py
green_agent/purple_interfaces/: base.py  file_agent.py  http_agent.py  openai_agent.py
green_bench/: cli.py  data.py  evaluator.py  openai_client.py  prompting.py  prompting2.py
green_bench_suite_fixed/: README.md  requirements.txt
helpful/: generate_prompts.py  optimal_plans.py  pyperplan_bfs_costs.py  rename_objects.py  val_only.py  validate_all.py
offline_experiments/: __init__.py  mlflow_utils.py  prompting.py  vecinf_adapter.py
offline_experiments/tools/: mlflow_aggregate.py
orchestrator/: react_orchestrator.py
prompts/: plan_prompt_template.md
purple_agent/: a2a_agent.py  base.py  file_agent.py  http_agent.py  least_to_most_agent.py  llm_registry.py  minimal_purple.py  openai_agent.py  react_agent.py  strategies.py  strategy_agent.py
purple_agent/react_dspy/: react_agent.py  react_config.py  react_settings.py  react_tools.py
scenarios/pddl/: scenario.toml
tests/: check_val.py  conftest.py  test_helpful.py  test_integration_val.py  test_local_llm.py  test_metrics.py  test_plan_parser.py  test_runner.py  test_val_wrapper.py
(+66 files in other folders)
