[project]
name = "agentic-planning-eval"
version = "0.1.0"
description = "A framework for evaluating agentic planners"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=2.12.1",
    "pandas>=2.0.0",
    "rich>=13.7.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "openai>=1.0.0",
    "pyyaml>=6.0.1",
    "dspy-ai",
    "a2a",
    "jupyter>=1.1.1",
    "a2a-sdk[http-server]>=0.3.0",
    "httpx>=0.28.1",
    "google-adk>=1.21.0",
    "cffi>=2.0.0",
    "agentbeats>=0.1.1",
    "anthropic>=0.75.0",
    "google-genai>=1.55.0",
    "dspy>=3.0.4",
    "python-dateutil>=2.9.0.post0",
    "graphene>=3.4.3",
    "requests>=2.31.0",
    "pyperplan>=2.1",
    "autopep8>=2.3.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.9.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["experiments", "green_agent", "purple_agent", "helpful"]

# ------------------------------------------------------------------
# Ruff Configuration
# ------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
exclude = ["purple_agent"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
